fixed desktop navsearch and fixed visibility on mobile day

--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,7 @@
     --celestial-blue: #4997d0ff;
     --cerulean: #007ea7ff;
     --prussian-blue: #003459ff;
-    --rich-black: #00171fff;
+    --rich-black: rgb(0, 23, 31);
     --offwhite: #fafafa;
     --grey: #ebebeb;
 }
@@ -217,13 +217,13 @@
     margin-left: 10px;
     align-self: flex-start;
     display: flex;
-    border: 1px solid #ccc;
+    /* border: 1px solid #ccc; */
 }
 
 #cof>button,
 #search-cof>button {
     background-color: #333;
-    color: var(--offwhite);
+    /* color: var(--offwhite); */
     padding: 0px 10px;
 }
 
@@ -235,11 +235,11 @@
 #cof>.active,
 #search-cof>.active {
     background-color: #111;
-    color: var(--white);
+    /* color: var(--white); */
 }
 
 .active:hover {
-    background-color: #222;
+    /* background-color: #222; */
     color: var(--white);
 }
 
@@ -456,8 +456,8 @@
 
         #home-info {
             height: calc(2/6 *100%);
-            background-color: rgba(135, 135, 135, 0.31);
-            border: 2px #fff solid;
+            background: rgba(255, 255, 255, 0.8);
+            /* border: 0.1px #fff solid; */
             border-radius: 10px;
             width: 99%;
             flex-direction: row;
@@ -474,10 +474,10 @@
 
         #home-forecast {
             width: 99%;
-            background-color: rgba(135, 135, 135, 0.31);
+            background: rgba(255, 255, 255, 0.8);
             height: calc(1.5/6 *100%);
             border-radius: 10px;
-            border: 2px #fff solid;
+            /* border: 0.1px #fff solid; */
             display: flex;
         }
 
@@ -540,11 +540,11 @@
             border: 0;
         }
 
-        /*#cof>button:hover,
+        #cof>button:hover,
         #search-cof>button:hover {
             background-color: transparent;
             color: #444444;
-        }*/
+        }
 
         #cof>.active,
         #search-cof>.active {
@@ -580,18 +580,18 @@
 
         .dayiconscont {
             width: 100%;
-            height: calc((0.75 * 0.75) * 100%);
+            height: calc(100%);
             display: flex;
             background-color: transparent;
             align-items: center;
             justify-content: center;
         }
 
-        .minmax {
+        /* .minmax {
             width: 100%;
             height: calc((0.25 * 0.75) * 100%);
             text-align: center;
-        }
+        } */
 
     }
 }
